Fixes #24587: Windows DSC logo on method are not aligned

--- a/webapp/sources/rudder/rudder-web/src/main/style/rudder/rudder-main.css
+++ b/webapp/sources/rudder/rudder-web/src/main/style/rudder/rudder-main.css
@@ -2442,11 +2442,14 @@ span.techversion {
   background-image    : url(../../images/dsc-icon.svg);
   background-repeat   : no-repeat;
   background-size     : contain;
-  margin-top : -6px;
-  position   : relative;
   display    : inline-block;
   height     : 20px;
   width      : 16px;
+}
+.jstree .dsc-icon,
+.btn .dsc-icon{
+  margin-top : -6px;
+  position   : relative;
   top        : 5px;
 }
 .fa.warnicon{
