--- a/webapp/sources/rudder/rudder-web/src/main/style/rudder/rudder-technique-editor.css
+++ b/webapp/sources/rudder/rudder-web/src/main/style/rudder/rudder-technique-editor.css
@@ -1209,6 +1209,7 @@ ul li.hide-method {
   padding: 8px;
   display: flex;
   align-self: center;
+  align-items: center;
   flex: 1;
 }
 .method .method-name i{
